# software

./: Cargo.toml  README.md  sdk.md
.github/actions/maturin-build/: action.yml
.github/workflows/: bench.yml  release.yml  wheels.yml
docs/: BACKENDS.md  CLI.md  CONFORMANCE.md  DETERMINISM.md  PRE_RELEASE_AUDIT_v0.1.0.md  README.md  SAL.md  SECURITY.md  SPEC.md  USER_STORIES.md
docs/specs/: dcd.schema.md  efpkg.schema.md  eir.schema.md  event_tensor.schema.md
eventflow-backends/: README.md  __init__.py  pyproject.toml
eventflow-backends/cpu_sim/: dcd.json  executor.py
eventflow-backends/eventflow_backends/: __init__.py  api.py
eventflow-backends/eventflow_backends/brainscales/: __init__.py  backend.py
eventflow-backends/eventflow_backends/cpu_sim/: __init__.py  backend.py
eventflow-backends/eventflow_backends/lava/: __init__.py  backend.py
eventflow-backends/eventflow_backends/spinnaker2/: __init__.py  backend.py
eventflow-backends/eventflow_backends/synsense/: __init__.py  backend.py
eventflow-backends/gpu_sim/: __init__.py  dcd.json  executor.py
eventflow-backends/registry/: registry.py
eventflow-backends/tests/: test_registry.py
eventflow-cli/: Cargo.toml  README.md  ef.py  pyproject.toml
eventflow-cli/eventflow_cli/: __init__.py  build.py  main.py  profile.py  run.py  validate.py
eventflow-cli/src/: compare.rs  main.rs
eventflow-cli/tests/: test_cli_smoke.py  test_ef_cli_json.py  test_ef_cli_sal_and_run.py
eventflow-core/: README.md  __init__.py  pyproject.toml  validators.py
eventflow-core/conformance/: comparator.py
eventflow-core/eventflow_core/: __init__.py  errors.py
eventflow-core/eventflow_core/_rust/: __init__.py
eventflow-core/eventflow_core/conformance/: compare.py
eventflow-core/eventflow_core/eir/: graph.py  ops.py  serialize.py  types.py  validate.py
eventflow-core/eventflow_core/runtime/: exec.py  scheduler.py  trace.py
eventflow-core/eventflow_core/util/: units.py
eventflow-core/graph/: README.md  __init__.py
eventflow-core/rust/: Cargo.toml
eventflow-core/rust/src/: lib.rs
eventflow-core/tests/: test_bench_gate_speedups.py  test_bench_native.py  test_graph_exec_event.py  test_native_errors.py  test_native_parity.py  test_ops_audio.py  test_ops_lif.py  test_ops_xy.py  test_scheduler_modes.py
eventflow-hub/: README.md  __init__.py  pyproject.toml
eventflow-hub/eventflow_hub/: __init__.py  auth.py  client.py  errors.py  pack.py  registry.py  schemas.py
eventflow-hub/tests/: test_pack.py  test_registry.py
eventflow-modules/: README.md  pyproject.toml
eventflow-modules/audio/: __init__.py
eventflow-modules/eventflow_modules/: __init__.py  errors.py
eventflow-modules/eventflow_modules/_rust/: __init__.py
eventflow-modules/eventflow_modules/audio/: __init__.py  always_on.py  diarization.py  frontend.py  kws.py  localization.py  vad.py
eventflow-modules/eventflow_modules/creative/: __init__.py  graphics.py  musicgen.py  sequencer.py
eventflow-modules/eventflow_modules/robotics/: __init__.py  obstacle.py  reflex.py  slam.py
eventflow-modules/eventflow_modules/timeseries/: __init__.py  anomaly.py  change_point.py  spike_mining.py
eventflow-modules/eventflow_modules/vision/: __init__.py  corner_tracking.py  gesture_detect.py  object_tracking.py  optical_flow.py
eventflow-modules/eventflow_modules/wellness/: __init__.py  hrv.py  sleep.py  stress.py
eventflow-modules/rust/: Cargo.toml
eventflow-modules/rust/src/: lib.rs
eventflow-modules/tests/: test_audio_always_on.py  test_audio_modules.py  test_bench_gate_speedups.py  test_bench_optical_flow.py  test_domain_modules.py  test_native_errors.py  test_optical_flow_arrays.py  test_optical_flow_coo_arrays.py
eventflow-sal/: README.md  __init__.py  api.py  pyproject.toml
eventflow-sal/eventflow_sal/: __init__.py  open.py  registry.py
eventflow-sal/eventflow_sal/api/: __init__.py  dcd.py  packet.py  source.py  uri.py
eventflow-sal/eventflow_sal/calib/: __init__.py  base.py  dvs.py
eventflow-sal/eventflow_sal/drivers/: __init__.py  audio.py  dvs.py  imu.py
eventflow-sal/eventflow_sal/sync/: __init__.py  clock.py  watermark.py
eventflow-sal/eventflow_sal/util/: __init__.py  rate.py  ring.py
eventflow-sal/sync/: __init__.py
eventflow-sal/tests/: test_packet.py  test_replay.py  test_stream_jsonl.py  test_uri.py
examples/always_on_audio/: bench.py  file_demo.py  mic_demo.py
examples/anomaly_timeseries/: README.md  eir.json
examples/anomaly_timeseries/traces/golden/: anomaly.golden.jsonl
examples/anomaly_timeseries/traces/inputs/: imu.norm.jsonl  imu.telemetry.json  timeseries_sample.jsonl
examples/robotics_slam/: README.md  eir.json
examples/robotics_slam/traces/inputs/: imu_sample.csv
examples/vision_corner_tracking/: README.md  eir.json
examples/vision_corner_tracking/traces/inputs/: corner_sample.jsonl
examples/vision_object_tracking/: README.md  eir.json
examples/vision_optical_flow/: README.md  eir.json
examples/vision_optical_flow/traces/golden/: vision.golden.jsonl
examples/vision_optical_flow/traces/inputs/: vision.norm.jsonl  vision.telemetry.json  vision_sample.jsonl
examples/wakeword/: README.md  eir.json
examples/wakeword/traces/inputs/: audio_sample.jsonl
interfaces/cxx/: README.md
interfaces/rest/: README.md
interfaces/rpc/: README.md
python/eventflow_sal/: __init__.py  sal.py  tensor.py  units.py
rust/workspace/: Cargo.toml
tests/: README.md
tests/integration/: README.md
tests/unit/: test_planners.py  test_runtime.py  test_validators.py
tools/: README.md  ef_conformance.py  gen_dvs_synthetic.py  gen_sine_wav.py
