[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "eventflow-modules"
version = "0.1.0"
description = "Domain-specific modules for EventFlow"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [{ name = "EventFlow Team" }]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "eventflow-core"
]

# Maturin configuration for a mixed Python/Rust project
[tool.maturin]
bindings = "pyo3"
module-name = "eventflow_modules._rust._vision_native"
manifest-path = "rust/Cargo.toml"
python-source = "."
manylinux = "2_28"
strip = true

[project.scripts]
ef-audio-demo = "eventflow_modules.audio.always_on:main"

[project.optional-dependencies]
audio-viz = ["matplotlib", "plotly", "sounddevice"]
