[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eventflow-sal"
version = "0.1.0"
description = "EventFlow Sensor Abstraction Layer (SAL)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{name="EventFlow Team"}]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eventflow_sal*"]
