[package]
name = "eventflow_core_native"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["EventFlow Team"]

[lib]
name = "eventflow_core_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py38"] }
numpy = { version = "0.26" }
once_cell = "1"