[package]
name = "eventflow_modules_vision_native"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["EventFlow Team"]

[lib]
name = "eventflow_modules_vision_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py38"] }
numpy = { version = "0.26" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"